syntax = "proto3";

package pb;

import "barber/barber.proto";


option go_package = "barbershop/src/pb/barber";


message CreateBarberEmployeeRequest{
    repeated BarberEmployee barber_employees = 1;
    string default_password = 2;
    int32 role_id = 3;
    string barber_shop_id = 4;
}

message CreateBarberEmployeeResponse {
    string message = 1;
}